--- a/blogr-landing-page-main/index.html
+++ b/blogr-landing-page-main/index.html
@@ -15,6 +15,29 @@
   </style>
 </head>
 <body>
+  <header>
+    <div class="main-bg"></div>
+    <nav class="navbar">
+      <h3 class="navbar-text float-left text-white">Blogr</h3>
+      <div class="collapse navbar-collapse" id="collapsibleNavbar">
+      <ul class="navbar-nav" style="margin-left: 1vw;">
+          <li class="nav-item nun_font" style="margin-left: 2vw;">
+            <a class="nav-link" href="#our-mission">Our Mission</a>
+          </li>
+          <!--
+          <li class="nav-item nun_font"style="margin-left: 2vw;">
+            <a class="nav-link" href="#get-psyche">Get Psyche</a>
+          </li>-->
+          <li class="nav-item nun_font"style="margin-left: 2vw;">
+            <a class="nav-link" href="#about-us">About Us</a>
+          </li>
+        </ul>
+      </div>
+  </nav>
+
+
+  </header>
+  <!--
   Product
 
   Overview
@@ -89,7 +112,7 @@
   
   Contact
   Newsletter
-  LinkedIn
+  LinkedIn-->
 
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
